overflow bugs

--- a/index1.scss
+++ b/index1.scss
@@ -7,7 +7,6 @@ body{
     width: 100vw;
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    overflow: hidden;
 }
 
 .popup{
